projects card gap issue

--- a/src/components/projectcards/projectcards.scss
+++ b/src/components/projectcards/projectcards.scss
@@ -44,9 +44,10 @@
     background-color: rgb(183, 184, 186);
     border-radius: 0;
   }
-  .extra{
+  .extra {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 2rem;
   }
 
   .end {
@@ -57,14 +58,12 @@
     border: none;
     background-color: white;
     cursor: pointer;
-    // margin-left: 2rem;
   }
   .down {
     color: rgb(86, 86, 86);
     border: none;
     background-color: white;
     cursor: pointer;
-    // margin-left: 6rem;
   }
   .change {
     background-color: rgb(214, 214, 214);
